Hiding curve segments has erratic behaviour. #33748

Closed
opened 2013-01-03 15:05:54 +01:00 by Konstantins Visnevskis · 4 comments

%%%--- Operating System, Graphics card ---
Vista, GTX470

- Blender version with error, and version that worked ---

r53413,

- Short description of error ---
  • If hiding curve segment in edit mode, it's normals are still displayed (BezierCurve.005).

  • Hidden curve segments remain hidden when exiting edit mode. Might be a feature not a bug, but it makes it really hard to select the curve if for some reason all the curve was hidden and edit mode exited (BezierCurve.005).

  • On some curves hiding works only for nodes(vertices), segments remain visible (BezierCurve.006).

  • If starting node(vertex) of a curve is hidden select All/None doesn't work anymore (in edit mode).

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      See the error section.%%%
%%%--- Operating System, Graphics card --- Vista, GTX470 - Blender version with error, and version that worked --- r53413, - Short description of error --- - If hiding curve segment in edit mode, it's normals are still displayed (BezierCurve.005). - Hidden curve segments remain hidden when exiting edit mode. Might be a feature not a bug, but it makes it really hard to select the curve if for some reason all the curve was hidden and edit mode exited (BezierCurve.005). - On some curves hiding works only for nodes(vertices), segments remain visible (BezierCurve.006). - If starting node(vertex) of a curve is hidden select All/None doesn't work anymore (in edit mode). - Steps for others to reproduce the error (preferably based on attached .blend file) --- See the error section.%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Seems to be very old code here, can check on it.%%%

%%%Seems to be very old code here, can check on it.%%%
Member

%%%Fixes are in svn now, thanks for reminding this old todo :)

  • normals are not being drawn for hidden curves
  • even worse: Blender also didn't hide the extrusions or bevels for hidden curves
  • outside edit mode, it shows all (as for all other modes)
  • (de)select-all now works when 1st (or any) handle was hidden.%%%
%%%Fixes are in svn now, thanks for reminding this old todo :) - normals are not being drawn for hidden curves - even worse: Blender also didn't hide the extrusions or bevels for hidden curves - outside edit mode, it shows all (as for all other modes) - (de)select-all now works when 1st (or any) handle was hidden.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33748
No description provided.